# Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debugmalloc.h  main.c  snake_mac_build_arm64
cmake/Modules/: FindSDL2.cmake  FindSDL2_ttf.cmake
lib/: rendering.c  rendering.h  save_system.c  save_system.h
lib/Game/: game.c  game.h  snake.c  snake.h
lib/Menu/: button.c  button.h  menu.c  menu.h  scoreboard.c  scoreboard.h
rendering/: button.c  button.h  menu.c  menu.h  rendering.c  rendering.h
rendering/Game/: game.c  game.h  snake.c  snake.h
